fix: email template

--- a/src/utils/emailTemplate.html
+++ b/src/utils/emailTemplate.html
@@ -58,20 +58,24 @@
   </head>
   <body>
     <div class="main__container">
-      <div class="heading">Happy Birthday!!! 🎉</div>
+      <div class="heading">Happy Birthday !! 🎉</div>
 
       <div class="message__container">
         <p>Dear ${username},</p>
         <p>
-          May your birthday be sprinkled with laughter, wrapped in warmth, and
-          filled with love. Here’s to celebrating you today and every day!
+          On your special day, I want to remind you of how amazing you are and
+          how much you mean to everyone around you. Your kindness, generosity,
+          and warmth touch the lives of so many people. May your birthday be
+          filled with all the love💖 and happiness😊 you deserve.
         </p>
+
         <p>
-          May your special day be packed with all the joy and blessings you can
-          imagine. Enjoy every moment to the fullest!
+          Here's to a fantastic year ahead filled with endless possibilities.
+          Break a Leg 💡 !!
         </p>
-        <p>Best wishes,</p>
-        <p style="margin: 0"><b>Josh</b>,<br />Jubilix</p>
+
+        <p>Happy Birthday 🎉🎉🎉</p>
+        <p style="margin: 0"><b>Lykan</b>,<br /><b>Birthday Reminder App</b></p>
       </div>
     </div>
   </body>
